2008-04-13  Brian Pepple  <bpepple@fedoraproject.org>

	* Makefile.am: 
	* twitux.omf.in:
	* C/legal.xml: 
	* C/Makefile.am:
	* C/twitux-C.omf:
	* C/twitux.xml:
	* figures/client.png:
	Initial help files.
